fix: whitespace at bottom of profile page

--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -1,6 +1,6 @@
 .root {
     background-color: var(--c-secondary);
-    margin-bottom: 1.25rem;
+    padding-bottom: 1.25rem;
 }
 
 .pageBody {
